samples/_failures_safe/1761218990_79ef6d_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_629d5e50.c: In function ‘main’:
./samples/SAFE/__tmp_629d5e50.c:173:5: error: expected expression at end of input
  173 |     return
      |     ^~~~~~
./samples/SAFE/__tmp_629d5e50.c:173:5: error: expected declaration or statement at end of input
